# temporal-insurance-demo

./: .env.cloud.example  .gitignore  AGENTS.md  README.md  build.gradle  gradle.properties  mise.cloud.toml  mise.toml  settings.gradle
.github/workflows/: ci.yml
agents/: README.md  agent_runtime.py  pyproject.toml  worker.py
agents/claim_adjuster/: __init__.py  agent_workflow.py  models.py  starter.py
agents/field_adjuster/: __init__.py  agent_workflow.py  config.py  models.py  starter.py  worker.py
agents/tests/: __init__.py  test_claim_adjuster.py  test_serialization_contract.py
api/: build.gradle
api/src/main/resources/: application-cloud.yml  application.yml
app/: index.html  package-lock.json  package.json
app/src/: App.css  App.jsx  index.css
app/src/data/: mockData.js
app/src/pages/: AdminPanel.css  AdminPanel.jsx  ClaimDetails.css  ClaimDetails.jsx  Login.css  Login.jsx  PolicyDetails.css  PolicyDetails.jsx  Portal.css  Portal.jsx  catHelpers.js  catHelpers.test.js  claimHelpers.js  claimHelpers.test.js  policyHelpers.js
docs/: ai-claim-adjustment-spec.md  cat-ui-spec.md
docs/presentations/: insurance-context.md  presentation.html  presentation.md
docs/specs/: auto-claim-app.md  auto-claim-workflow.md  property-cat-claim.md
domain/: build.gradle
domain/src/test/resources/agents/: claim_decision_report.json  (+3 more)
scripts/: demo-adjuster.sh  demo-setup.sh  nexus-notifications-ep.md  nexus-payment-ep.md
src/main/resources/: application.yml
workers/: build.gradle
workers/src/main/resources/: application-cloud.yml  application.yml
(+193 files in other folders)
