# uv project definition for the Temporal Python agents.
# Declares the temporalio SDK (with OpenAI Agents integration) dependency.
[project]
name = "temporal-agents"
version = "0.1.0"
description = "Temporal Python AI agents for the insurance demo"
requires-python = ">=3.12"
readme = "README.md"
dependencies = ["temporalio[openai-agents,opentelemetry]>=1.30.0,<2"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["field_adjuster", "claim_adjuster"]

[tool.pytest.ini_options]
# Agent packages are imported top-level (e.g. `from claim_adjuster.models import ...`), matching
# how the worker and starters import them, so the project root is on the path for tests too.
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
